# LearningRust

./: .gitignore  README.md  RustyBeach.icls
axum_store/api/: Cargo.toml
axum_store/api/axum_store_derive/: Cargo.toml
axum_store/api/axum_store_derive/src/: lib.rs
axum_store/api/src/: error.rs  main.rs
axum_store/api/src/models/: output.rs
axum_store/api/src/models/output/: another.rs  pancakes.rs
axum_store/api/src/web/: routes_login.rs
axum_store/api/tests/: quick_dev.rs
common_collections/src/: main.rs
generics_traits_and_lifetimes/src/: main.rs
guessing_game/: .gitignore
guessing_game/src/: main.rs
hello_axum/: Cargo.toml
hello_axum/src/: main.rs
hello_cargo/src/: main.rs
interacting_with_aws/: Cargo.toml
interacting_with_aws/src/: main.rs
inversion_of_control/: Cargo.toml
inversion_of_control/src/: main.rs  validators.rs
inversion_of_control/src/actions/: domains.rs
inversion_of_control/src/commands/: domains.rs
inversion_of_control/src/repositories/read/: domain.rs
inversion_of_control/src/validators/: domain_assign.rs
iterators_and_closures/src/: main.rs
iterators_vs_loops_benchmarking/: Cargo.toml
iterators_vs_loops_benchmarking/src/: main.rs
managing_growing_projects/src/: main.rs
managing_growing_projects/src/garden/: vegetables.rs
minigrep/: output.txt
minigrep/src/: lib.rs  main.rs
restaurant/src/: lib.rs
rustVSlangsbench/rustbench/src/: main.rs
rustVSlangsbench/scala2bench/: build.sbt
smart_pointers/: Cargo.toml
smart_pointers/src/: boxes.rs  main.rs
understanding_ownership/src/: main.rs
(+2 files in other folders)
