workspace = { members = ["axum_store_derive"] }
[package]
name = "axum_store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
axum = { version = "0.7.5", features = ["http1", "http2", "json", "tokio", "tower-log", "tracing", "query"] }
axum_store_derive = { path = "axum_store_derive" }
httpc-test = "0.1.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
